banner section completed with responsive

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
         </div>
     </nav>
     <!-- nav completed -->
+    <div class="banner">
+        <div class="content-container">
+            <P class="banner-title">PLAY LIKE THE</P>
+            <p class="main-title">G.O.A.T</p>
+            <P class="common-title"><SPan style="color: rgba(255, 0, 0, 0.445);"><i class="fa-regular fa-circle-play"></i></SPan> 1-Click instant play</P>
+            <P class="common-title"><Span style="color: rgba(255, 0, 0, 0.623);"><i class="fa-solid fa-download"></i></Span> No Download</P>
+            <P class="common-title"><span style="color: rgba(0, 128, 0, 0.336);"><i class="fa-solid fa-user-group"></i></span> 1000s of supported online games</P>
+            <button class="btn-1">SIGN IN</button>
+            <BUtton class="btn-2">GO ROUGE</BUtton>
+        </div>
+        <div class="banner-img">
+            <img src="images/Group 18.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
