--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@
             <img src="images/Group 18.png" alt="">
         </div>
     </div>
+    <!-- banner completed  -->
+    <div class="games">
+        <div class="games-title">
+            <h3>Online Games <span class="games-title-spcl"">Funny Videos</span></h3>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="games-images">
+            <div class="games-img">
+                <img src="images/Rectangle 4.png" alt="">
+                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="games-img">
+                <img src="images/Rectangle 5.png" alt="">
+                <p>Did you score? #unblockedgames #school</p>
+            </div>
+            <div class="games-img">
+                <img src="images/Rectangle 7.png" alt="">
+                <p>Breaking game records like OG</p>
+            </div>
+            <div class="games-img">
+                <img src="images/Rectangle 6.png" alt="">
+                <p>Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
