play section double picture done with responsive alhamdulillah

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- banner completed  -->
     <div class="games">
         <div class="games-title">
-            <h3>Online Games <span class="games-title-spcl"">Funny Videos</span></h3>
+            <h3>Online Games <span class="games-title-spcl">Funny Videos</span></h3>
             <p>A Collection of Hilarious Videos to Brighten Your Day</p>
         </div>
         <div class="games-images">
@@ -65,6 +65,20 @@
                 <img src="images/Rectangle 6.png" alt="">
                 <p>Busted gaming on school laptop, but you are still lit.</p>
             </div>
+        </div>
+    </div>
+    <!-- games done  -->
+
+    <div class="play">
+        <div class="play-img">
+            <img class="play-img-1" src="images/Rectangle 67.png" alt="">
+            <div class="play-image-2">
+                <img class="play-img-2" src="images/Rectangle 78.png" alt="">
+            </div>
+        </div>
+        <div class="play-content">
+            <h3><span class="games-title-spcl">Play Games <br>Online</span> Anywhere,<br> Anytime!</h3>
+            <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
         </div>
     </div>
     
