--- a/index.html
+++ b/index.html
@@ -121,5 +121,38 @@
         </div>
 
     </div>
+    <!-- hover done  -->
+    <div class="footer-container">
+        <div class="footer-title"><img src="images/Frame.png" alt="">
+            <h3><span style="color: #FF42A5;">G</span><span style="color: white;">amer</span></h3>
+    
+         </div>
+         <div class="footer-p">
+            <span>Our Story</span>
+            <span>Games</span>
+            <span>Web Games</span>
+            <span>Careers</span>
+            <span>Support</span>
+            <span>My Account</span>
+         </div>
+         <div class="footer-span">
+            <span style="color: white;"><i class="fa-brands fa-square-twitter"></i></span>
+            <span style="color: blue;"><i class="fa-brands fa-facebook"></i></span>
+            <span style="color: red;"><i class="fa-brands fa-youtube"></i></span>
+            <span style="color: white;"><i class="fa-brands fa-linkedin-in"></i></span>
+            <span style="color: lightgray;"><i class="fa-brands fa-instagram"></i></span>
+            <span style="color: white;"><i class="fa-brands fa-apple"></i></span>
+         </div>
+         <div class="footer-leg">
+            <span>Terms and Conditions</span>
+            <span>Privacy Policy</span>
+            <span>Cookie Policy</span>
+            <span>Privacy Settings</span>
+         </div>
+         <div class="last-p">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+         </div>
+
+    </div>
 </body>
 </html>
