almost done everything,alhamdulillah

--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
                 <img src="images/Rectangle 5.png" alt="">
                 <p>Did you score? #unblockedgames #school</p>
             </div>
-            <div class="games-img">
+            <div id="special-img" class="games-img">
                 <img src="images/Rectangle 7.png" alt="">
                 <p>Breaking game records like OG</p>
+                <div class="overlay">
+                    <i class="fa-regular fa-circle-play"></i>
+                    <div class="watch-later-text">Watch Later</div>
+                  </div>
             </div>
             <div class="games-img">
                 <img src="images/Rectangle 6.png" alt="">
@@ -78,7 +82,7 @@
         </div>
         <div class="play-content">
             <h3><span class="games-title-spcl">Play Games <br>Online</span> Anywhere,<br> Anytime!</h3>
-            <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+            <p>PC. dad's phone, mom's tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
         </div>
     </div>
     <!-- play done  -->
