--- a/index.html
+++ b/index.html
@@ -57,14 +57,17 @@
                 <img src="images/Rectangle 5.png" alt="">
                 <p>Did you score? #unblockedgames #school</p>
             </div>
-            <div id="special-img" class="games-img">
+            <div  class="games-img">
+            <div id="special-img">
                 <img src="images/Rectangle 7.png" alt="">
-                <p>Breaking game records like OG</p>
+                
                 <div class="overlay">
                     <i class="fa-regular fa-circle-play"></i>
-                    <div class="watch-later-text">Watch Later</div>
+                    <div class="watch-later-text">Watch Now</div>
                   </div>
             </div>
+            <p>Breaking game records like OG</p>
+        </div>
             <div class="games-img">
                 <img src="images/Rectangle 6.png" alt="">
                 <p>Busted gaming on school laptop, but you are still lit.</p>
